BTCA-01: Toggle verification

--- a/views/main.html
+++ b/views/main.html
@@ -74,7 +74,7 @@
                                     <td>{{value.verification_applied_date}}</td>
                                     <td><button type="button" class="btn btn-success" ng-click="openDeleteModal($index, exam.key)">View</button></td>
                                     <td><p class="text-warning"> {{value.id_verification_status}}</p></td>
-                                    <td><button type="button" class="btn btn-danger" ng-click="verifiyId(key, value.id)">Verify</button></td>
+                                    <td><button type="button" class="btn btn-danger" ng-click="verifiyId(key, value.id)" ng-hide="verified(value.id_verification_status)">Verify</button></td>
                                 </tr>
                                 <tr ng-if="isEmpty">
                                     <td colspan="3" class="center">No exams found.</td>
