MLBTC-01: Status color

--- a/views/main.html
+++ b/views/main.html
@@ -73,7 +73,7 @@
                                     <td>{{value.id}}</td>
                                     <td>{{value.verification_applied_date}}</td>
                                     <td><button type="button" class="btn btn-success" ng-click="openDeleteModal($index, exam.key)">View</button></td>
-                                    <td><p class="text-warning"> {{value.id_verification_status}}</p></td>
+                                    <td><span ng-class="verified(value.id_verification_status) ? 'text-success' : 'text-warning'">{{value.id_verification_status}}</span></td>
                                     <td><button type="button" class="btn btn-danger" ng-click="verifiyId(key, value.id)" ng-hide="verified(value.id_verification_status)">Verify</button></td>
                                 </tr>
                                 <tr ng-if="isEmpty">
